Fix alignment issues with dropdown component
Dropdown icon was going out of div because of p element width

--- a/src/app/coursekit/coursekit.component.css
+++ b/src/app/coursekit/coursekit.component.css
@@ -133,7 +133,7 @@ button {
 }
 
 .course-name {
-    width: 477px;
+    width: 397px;
 }
 
 .document-link input {
