--- a/src/app/dropdown/dropdown.component.css
+++ b/src/app/dropdown/dropdown.component.css
@@ -1,5 +1,5 @@
 .container {
-    width: 85%;
+    width: 100%;
     height: 47px;
     flex-shrink: 0;
     border-radius: 12px;
@@ -22,7 +22,7 @@ img {
     margin-top: 13px;
     margin-left: 10px;
     font-size: 16px;
-    width: 355px;
+    width: fit-content;
 }
 
 .dd {
